<resources>
    <string name="app_name">FirebaseDB</string>
    <string name="please_sign_up_to_continue">Please sign up to continue</string>
    <string name="signup_phone">Sign up using phone</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_get_started">Sign up to get started!</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="already_member">
    <![CDATA[I\'m already a member, <b><font color=#D4557F>Sign In</b>]]>
  </string>
    <string name="new_member">
    <![CDATA[I\'m a new user, <b><font color=#D4557F>Sign Up</b>]]>
  </string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logout">Logout</string>
    <string name="add_complaints_details">Fill this form to lodge a complaint</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_flat_no">Flat number</string>
    <string name="hint_complaint_type">Complaint Type</string>
    <string name="hint_complaint_details">Complaint Description</string>
    <string name="hint_locality">Locality</string>
    <string name="date">Date</string>
    <string name="date_picker_title">Select a Date</string>
    <string name="date_string">%s/%s/%s</string>
    <string name="submit">Submit</string>

    <string-array name="complaint_types">
        <item>Electricians</item>
        <item>Plumber</item>
        <item>Carpenter</item>
        <item>Others</item>
    </string-array>

    <string-array name="locality">
        <item>Bank Road</item>
        <item>Lohia Nagar</item>
        <item>Kurji</item>
        <item>Rajendra Nagar</item>
        <item>Digha</item>
        <item>Bahadurpur</item>
    </string-array>
</resources>